# svg-blaze

./: index.html  svg-blaze.cabal
app/: Blaze.hs  Main.hs  Parse.hs  Shapes.hs
