name:                svg-blaze
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/svg-blaze#readme
license:             BSD3
license-file:        LICENSE
author:              Glenn Strong
maintainer:          Glenn.Strong@scss.tcd.ie
copyright:           2016 Glenn Strong
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable svg-blaze-it
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , blaze-html
                     , blaze-svg
                     , scotty
                     , text
  other-modules:       Shapes
                     , Render
                     , Ansi
                     , Blaze

  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/githubuser/svg-blaze
